<resources>
    //Application

    <string name="app_name">MediScan</string>
    <string name="tab_text_1">Search History</string>
    <string name="tab_text_2">Scan</string>
    <string name="tab_text_3">Product Info</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="take_photo">Take a Picture!</string>
    <string name="search">MediScan: Search Here</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    //ListHeader

    <string name="listProduct">Product</string>
    <string name="listCompositions">Active Substances</string>
    <string name="listOrganization">Organization info</string>
    <string name="listPackaging">Packages</string>

    //Product

    <string name="name"><u>Name:</u></string>
    <string name="presc"><u>Prescription:</u></string>
    <string name="prodType"><u>Product Type:</u></string>
    <string name="medForm"><u>Pharmaceutical Form:</u></string>
    <string name="strength"><u>Strength:</u></string>
    <string name="narc"><u>Narcotic Classification:</u></string>
    <string name="saleStopped"><u>Sales Stopped:</u></string>
    <string name="noPrescription">Non-prescription</string>


    //Organizations

    <string name="orgName"><u>Organization Name:</u></string>
    <string name="orgAdr">Address:</string>
    <string name="country">Country:</string>
    <string name="role">Role:</string>

    //Packageinfo

    <string name="packageType"><u>Type:</u></string>
    <string name="lifespan">Lifespan:</string>
    <string name="storageInfo">Storage Information:</string>
    <string name="fassButton">VIEW PRODUCT ON FASS.SE</string>


    //Wakeup Dialog Strings


    <string name="dialog_text">All information in this application is collected from Läkemedelsverket\'s website and from FASS.se</string>
    <string name="dialog_text_disclaimer"> The user is solely responsible for any decisions or actions made from the information presented in this app. Please verify that the correct drug is shown on the screen after a search. The developers of this app resign themselves from any responsibility. By clicking below you accept these terms.</string>
    <string name="dialog_text_ok">I accept these terms</string>
    <string name="dialog_Select_Drug">Select your preferred drug</string>
    <string name="dialog_Drug_Clicked_1">Drug: </string>
    <string name="dialog_Drug_Clicked_2"> Clicked</string>


    //Camera related
    <string name="no_text_found">Unable to detect text, please try again.</string>
    <string name="no_product_match">Could not find a suitable product named:</string>
    <string name="textrec_not_available">Textrecognition is not available at the moment.</string>

    //Error texts
    <string name="Product_Error">This element is corrupted from the database. Item has been added to fix list.</string>
    <string name="Communication_Error">Could not communicate with database. Try again later.</string>
    <string name="Not_Found_Error">This element does not exist.</string>
    <string name="camera_not_granted">Camera permissions not granted.</string>

    <string name="mainFont">sans-serif-condensed</string>


    //How to
    <string name="how_to_title">How to use the app:</string>
    <string name="how_to_scan">Press anywhere on the camera screen to start the search. The app will analyze the image and search the database using the word(s) with the biggest size. Please place the text you are about to scan as close to the camera as possible for the best result.</string>
    <string name="how_to_manual">There is also the option of searching using manual input. Click on the search bar to type.</string>
    <string name="how_to_history">The app will store the last 10 items found during searches. Click to view them again.</string>
    <string name="how_to_links">In the results view, clicking on one of the active substances will result in a Google search for that perticular substance.</string>

</resources>
