<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20dp"
                android:textAlignment="gravity"
                android:gravity="center_horizontal"
                android:fontFamily="@string/mainFont"/>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/txt_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/dialog_text"
        android:textColor="@color/colorTabText"
        android:textSize="15dp"
        android:textStyle="bold"
        android:fontFamily="@string/mainFont"/>

    <TextView
        android:id="@+id/txt_dialog_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/dialog_text_disclaimer"
        android:textAlignment="center"
        android:textColor="@color/colorTabText"
        android:textSize="15dp"
        android:textStyle="bold"
        android:fontFamily="@string/mainFont"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:text="@string/dialog_text_ok"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp"
            android:fontFamily="@string/mainFont"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:background="@drawable/button_background"

            />

    </LinearLayout>

</LinearLayout>