<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="right">

        <TextView
            android:id="@+id/close_help_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circlebackground"
            android:text="X"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="end"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/how_to_title"
            android:textAlignment="center"
            android:textColor="@color/colorTabText"
            android:textSize="15dp"
            android:textStyle="bold"
            android:fontFamily="@string/mainFont"
            android:padding="10dp"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:id="@+id/info_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:src="@drawable/scan"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>


        <TextView
            android:id="@+id/info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/how_to_scan"
            android:textAlignment="center"
            android:textColor="@color/colorTabText"
            android:textSize="15dp"
            android:fontFamily="@string/mainFont"
            android:layout_weight="50"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:weightSum="12"
        android:paddingTop="@dimen/fab_margin">

        <ImageView
            android:id="@+id/info_page_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/info_page_button"
            android:tint="@color/white"
            android:gravity="center"
            android:padding="10dp"/>
        <ImageView
            android:id="@+id/info_page_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/info_page_button"
            android:tint="@color/colorTabText"
            android:gravity="center"
            android:padding="10dp"/>
        <ImageView
            android:id="@+id/info_page_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/info_page_button"
            android:tint="@color/colorTabText"
            android:gravity="center"
            android:padding="10dp"/>
        <ImageView
            android:id="@+id/info_page_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@drawable/info_page_button"
            android:tint="@color/colorTabText"
            android:gravity="center"
            android:padding="10dp"/>
    </LinearLayout>

</LinearLayout>
